// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (a2a, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > chat.ts (a2a, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (a2a, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > chat.ts (a2a, iam) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(remote.region),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(remote.region),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (ag-ui, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > chat.ts (ag-ui, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch() : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (ag-ui, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > chat.ts (ag-ui, iam) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch(remote.region) : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (http, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > chat.ts (http, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (Python FastAPI / JSONL streaming), using the
// generated client. Connects to the local \`dev\` server, or the deployed
// agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgent } from './generated/client.gen.js';
import {
  createAgentCoreFetch,
  resolveRemoteAgent,
  SESSION_ID,
} from './agentcore.js';

const SESSION_ID_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

const remote = await resolveRemoteAgent();

class TestProjectAgentAdapter implements ChatAdapter {
  private client!: TestProjectAgent;

  async connect(url: string) {
    this.client = remote
      ? new TestProjectAgent({
          url: \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}\`,
          fetch: createAgentCoreFetch(),
        })
      : new TestProjectAgent({
          url,
          fetch: (input, init) => {
            const headers = new Headers(init?.headers);
            headers.set(SESSION_ID_HEADER, SESSION_ID);
            return fetch(input, { ...init, headers });
          },
        });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    for await (const chunk of this.client.invoke({ message: text })) {
      if (typeof chunk.content === 'string') yield chunk.content;
    }
  }
}

await chatLoop(new TestProjectAgentAdapter(), process.env.URL ?? '');
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (http, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, string> };
  const arn = config?.agentRuntimes?.['TestProjectAgent'];
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > chat.ts (http, iam) 1`] = `
"// Chat CLI for TestProjectAgent (Python FastAPI / JSONL streaming), using the
// generated client. Connects to the local \`dev\` server, or the deployed
// agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgent } from './generated/client.gen.js';
import {
  createAgentCoreFetch,
  resolveRemoteAgent,
  SESSION_ID,
} from './agentcore.js';

const SESSION_ID_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

const remote = await resolveRemoteAgent();

class TestProjectAgentAdapter implements ChatAdapter {
  private client!: TestProjectAgent;

  async connect(url: string) {
    this.client = remote
      ? new TestProjectAgent({
          url: \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}\`,
          fetch: createAgentCoreFetch(remote.region),
        })
      : new TestProjectAgent({
          url,
          fetch: (input, init) => {
            const headers = new Headers(init?.headers);
            headers.set(SESSION_ID_HEADER, SESSION_ID);
            return fetch(input, { ...init, headers });
          },
        });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    for await (const chunk of this.client.invoke({ message: text })) {
      if (typeof chunk.content === 'string') yield chunk.content;
    }
  }
}

await chatLoop(new TestProjectAgentAdapter(), process.env.URL ?? '');
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-__init__.py 1`] = `""`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-agent.py 1`] = `
"import os

from langchain.agents import create_agent
from langchain_aws import ChatBedrockConverse
from langchain_core.tools import tool
from langgraph.checkpoint.memory import InMemorySaver

REGION = os.environ.get("AWS_REGION", "us-east-1")
MODEL_ID = os.environ.get("MODEL_ID", "global.anthropic.claude-haiku-4-5-20251001-v1:0")


@tool
def subtract(a: int, b: int) -> int:
    """Subtract b from a."""
    return a - b


def get_agent():
    model = ChatBedrockConverse(model=MODEL_ID, region_name=REGION)
    # Swap InMemorySaver for a durable checkpointer in a multi-replica deployment.
    return create_agent(
        model=model,
        tools=[subtract],
        system_prompt="""
You are a mathematical wizard.
Use your tools for mathematical tasks.
Refer to tools as your 'spellbook'.
""",
        checkpointer=InMemorySaver(),
    )
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-main.py 1`] = `
"import logging
import time
import uuid

from ag_ui.core import EventType, RunAgentInput, RunErrorEvent
from ag_ui.encoder import EventEncoder
from ag_ui_langgraph import LangGraphAgent
from fastapi import FastAPI, Request
from fastapi.middleware.cors import CORSMiddleware
from fastapi.responses import JSONResponse, StreamingResponse
from proj_agent_connection import get_current_session_id, session_id_context
from starlette.middleware.base import BaseHTTPMiddleware

from .agent import get_agent

logging.basicConfig(level=logging.INFO)

SESSION_ID_HEADER = "x-amzn-bedrock-agentcore-runtime-session-id"

_graph = get_agent()

agui_agent = LangGraphAgent(
    name="SnapshotAgent",
    graph=_graph,
    description="A LangChain/LangGraph Agent exposed via the AG-UI protocol.",
)


class _SessionIdMiddleware(BaseHTTPMiddleware):
    """Bind the session ID for this request so downstream MCP / A2A clients forward it on outbound calls."""

    async def dispatch(self, request: Request, call_next):
        session_id = request.headers.get(SESSION_ID_HEADER) or str(uuid.uuid4())
        with session_id_context(session_id):
            return await call_next(request)


app = FastAPI(title="SnapshotAgent")
# Allow browser-based AG-UI clients (e.g. a connected React website) to call
# this agent cross-origin, including the CORS preflight.
app.add_middleware(
    CORSMiddleware,
    allow_origins=["*"],
    allow_credentials=True,
    allow_methods=["*"],
    allow_headers=["*"],
)
app.add_middleware(_SessionIdMiddleware)


@app.post("/invocations")
async def invocations(request: Request):
    # Validate the body manually since AgentCore may omit Content-Type.
    accept = request.headers.get("accept") or ""
    encoder = EventEncoder(accept=accept)
    raw = await request.body()
    try:
        input_data = RunAgentInput.model_validate_json(raw)
    except Exception as exc:
        message = f"Invalid RunAgentInput: {str(exc)[:200]}"

        async def _bad():
            yield encoder.encode(
                RunErrorEvent(
                    type=EventType.RUN_ERROR, message=message, code="BAD_REQUEST"
                )
            )

        return StreamingResponse(_bad(), media_type=encoder.get_content_type())

    session_id = request.headers.get(SESSION_ID_HEADER) or get_current_session_id()

    async def event_generator():
        # Re-bind the session: the streaming body runs outside the middleware.
        with session_id_context(session_id or str(uuid.uuid4())):
            try:
                async for event in agui_agent.run(input_data):
                    yield encoder.encode(event)
            except Exception as e:
                yield encoder.encode(
                    RunErrorEvent(
                        type=EventType.RUN_ERROR,
                        message=str(e)[:300],
                        code="AGENT_ERROR",
                    )
                )

    return StreamingResponse(event_generator(), media_type=encoder.get_content_type())


@app.get("/ping")
async def ping():
    return JSONResponse({"status": "Healthy", "time_of_last_update": int(time.time())})
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-pyproject.toml 1`] = `
"[project]
name = "proj.test_project"
version = "0.1.0"
dependencies = [
  "proj-agent-connection",
  "aws-lambda-powertools==3.29.0",
  "aws-opentelemetry-distro==0.17.1",
  "bedrock-agentcore==1.14.1",
  "boto3==1.43.29",
  "fastapi==0.137.1",
  "mcp==1.27.2",
  "langchain==1.3.9",
  "langchain-aws==1.5.1",
  "langgraph==1.2.5",
  "ag-ui-protocol==0.1.19",
  "ag-ui-langgraph==0.0.42",
  "uvicorn==0.49.0"
]

[dependency-groups]
dev = [ "fastapi[standard]==0.137.1" ]

[tool.uv]
dev-dependencies = [ ]

[tool.uv.sources.proj-agent-connection]
workspace = true
"
`;
